Details
-
Bug
-
Status: Resolved
-
Trivial
-
Resolution: Fixed
-
None
Description
DCHECK(potentially_expensive()) will evaluate the argument even in release mode, and is used in several places with the assumption that it will do so (which means removing the guarantee of evaluation causes numerous failures). By contrast, most debug assertion macros elide their arguments entirely (<cassert>.assert, <glog/logging.h>) in release mode
Attachments
Issue Links
- links to