ARROW-4664: [C++] Do not execute expressions inside DCHECK macros in release builds

This hard-suppresses expressions passed to DCHECK macros. IMHO the intent of these macros is to only execute their contents in debug builds, so we are assured of zero cost in release builds. This is currently not the case and I regard it as a regression from prior releases of the project.

I think that `DCHECK_OK` still executes the code within. For the sake of avoiding time-wasting discussions I request that we address the behavior of DCHECK_OK in a separate issue.

Author: Wes McKinney <wesm+git@apache.org>

Closes #3854 from wesm/ARROW-4664 and squashes the following commits:

81f093b36 <Wes McKinney> Unmap memory outside of DCHECK_EQ
55256ab74 <Wes McKinney> Add missing strict-aliasing pragma
2f0e8f2b8 <Wes McKinney> Fix gandiva StringToTimestamp function breaking tests in release builds
c49c4dd34 <Wes McKinney> Simplify unit test, do not suppress unused variable warnings in release builds
9e9138311 <Wes McKinney> Fix some unit tests broken by DCHECK expressions not running
74523dd86 <Wes McKinney> Do not evaluate code inside DCHECK expressions (except DCHECK_OK) in release builds