cpp/src/arrow/flight/server.cc
@@ -77,7 +77,14 @@ class FlightMessageReaderImpl : public FlightMessageReader {
 
     internal::FlightData data;
     // Pretend to be pb::FlightData and intercept in SerializationTraits
+#ifndef _WIN32
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wstrict-aliasing"
+#endif
     if (reader_->Read(reinterpret_cast<pb::FlightData*>(&data))) {
+#ifndef _WIN32
+#pragma GCC diagnostic pop
+#endif
       std::unique_ptr<ipc::Message> message;
 
       // Validate IPC message
@@ -207,6 +214,10 @@ class FlightServiceImpl : public FlightService::Service {
 
     // Pretend to be pb::FlightData, we cast back to FlightPayload in
     // SerializationTraits
+#ifndef _WIN32
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wstrict-aliasing"
+#endif
     writer->Write(*reinterpret_cast<const pb::FlightData*>(&schema_payload),
                   grpc::WriteOptions());
 
@@ -221,6 +232,9 @@ class FlightServiceImpl : public FlightService::Service {
         break;
       }
     }
+#ifndef _WIN32
+#pragma GCC diagnostic pop
+#endif
     return grpc::Status::OK;
   }
 
